[package]
name = "smua"
version = "0.1.0"
authors = ["Nakano Masaki <namachan10777@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imap = "2.1.2"
native-tls = "0.2.4"
encoding_rs = "0.8.23"
mailparse = "0.12.1"
serde = "1.0.111"
serde_json = "1.0.53"
serde_derive = "1.0.111"
clap = "2.33.1"
rpassword = "4.0.5"
